--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "s \"art vandelay\" # 'Art Vandelay'"
    ]
   },
   {
