Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,8 @@
    },
    "outputs": [],
    "source": [
-    "s \"art vandelay\" # 'Art Vandelay'"
+    "s = \"art vandelay\" # 'Art Vandelay'\n",
+    "s."
    ]
   },
   {
