Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
    ],
    "source": [
     "s = \"art vandelay\" # 'Art Vandelay'\n",
-    "s.capitalize()"
+    "s.capitalize(0,1)"
    ]
   },
   {
