Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,14 @@
        "'Art vandelay'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s = \"art vandelay\" # 'Art Vandelay'\n",
-    "s.capitalize(0,1)"
+    "s.capitalize()"
    ]
   },
   {
