Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -183,7 +183,8 @@
    },
    "outputs": [],
    "source": [
-    "\"Ceo\" # 'CEO'\n"
+    "a=\"Ceo\" # 'CEO'\n",
+    "a.upper()\n"
    ]
   },
   {
