Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -211,7 +211,8 @@
    },
    "outputs": [],
    "source": [
-    "k = \"art.vandelay@vandelay.co\" # False\n"
+    "k = \"art.vandelay@vandelay.co\" # False\n",
+    "k.endswith\n"
    ]
   },
   {
