--- a/index.ipynb
+++ b/index.ipynb
@@ -270,22 +270,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'h'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-12-0b6875ed646c>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-0b6875ed646c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    [:3]\u001b[0m\n\u001b[0m     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "h=\"7285553334\" # 728\n",
+    "\"7285553334\" # 728\n",
     "[:3]"
    ]
   },
